# MISEIA_1-6-30-letsencrypt-client

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  README.md  RETROSPECTIVA-2026-05-02.md  RETROSPECTIVA-2026-06-29.md  RUN_TEST_and_STOP.md  docker-compose.prod.yml  docker-compose.yml  index.html
.github/workflows/: ci-cd.yml
docs/decisions/: ADR-001-ecdsa-p256-account-key.md  ADR-002-axum-challenge-server.md  ADR-003-per-domain-pem-storage.md
docs/prompts/: feature_001_project_html_page_prompt.md  feature_002_nginx_traefik_deploy_prompt.md
scripts/: add-hosts.sh  fetch-pebble-ca.sh  test-issue.sh
src/: main.rs
src/acme/: account.rs  challenge.rs  client.rs  crypto.rs  directory.rs  mod.rs  order.rs
src/cert/: csr.rs  mod.rs  storage.rs
test-app/: package-lock.json  package.json  server.js
tests/: integration_crypto.rs
