[package]
name = "acme-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acme-client"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.13"
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
x509-parser = "0.16"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lints.rust]
dead_code = "warn"

[lints.clippy]
unwrap_used = "warn"
